api/swim_form/src/tests/derive/form/incorrect_tag_type_enum.stderr
error: Expected a string literal
  --> $DIR/src/tests/derive/form/incorrect_tag_type_enum.rs:18:14
   |
18 |     #[derive(Form)]
   |              ^^^^
